# air-respeck-5

./: .gitignore  README.md  RESpeck.config  build.gradle  d  gradle.properties
app/: build.gradle  build.gradle.rej  fabric.properties  google-services.json  proguard-rules.pro
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  respeck-jni-daphne.c  respeck-jni.c  respeck-jni.dylib  respeck.c  respeck.h
app/src/main/jni/activityclassification/: predictions.c  predictions.h
app/src/main/jni/breathing/: activity_filter.c  activity_filter.h  activity_level_buffer.c  activity_level_buffer.h  average.c  average.h  axis_and_angle.c  axis_and_angle.h  breath_detection.c  breath_detection.h  breathing.c  breathing.h  breathing_rate.c  breathing_rate.h  breathing_rate_stats.c  breathing_rate_stats.h  ma_stats.c  ma_stats.h  math_helper.c  math_helper.h  mean_accel.c  mean_accel.h  mean_accel_filter.c  mean_accel_filter.h  mean_average_filter.c  mean_average_filter.h  mean_axis.c  mean_axis.h  mean_axis_buffer.c  mean_axis_buffer.h  mean_buffer.c  mean_buffer.h  mean_buffer_3d.c  mean_buffer_3d.h  mean_post_filter.c  mean_post_filter.h  mean_unit_accel_buffer.c  mean_unit_accel_buffer.h  median_average.c  median_average.h  (+6 more)
app/src/main/jni/stepcount/: step_count.c  step_count.h  vector_length_buffer.c  vector_length_buffer.h
config_files/: Daphne - RESpeck.config  Dublin - RESpeck.config  Everything - RESpeck.config  MSP - RESpeck.config  README.txt
model for breathing code testing/: README.txt  creating_windows_dll_commands.txt  model_accel.csv  model_measures.csv
(+423 files in other folders)
